✅ Меню каталога в шапке

--- a/source/index.pug
+++ b/source/index.pug
@@ -9,6 +9,7 @@ html(lang="ru")
 			include pug/top
 			include pug/header
 			include pug/menu-catalog
+			include pug/top-menu-catalog
 			include pug/breadcrumbs
 			include pug/catalog
 			include pug/info
