--- a/source/stylus/style.styl
+++ b/source/stylus/style.styl
@@ -17,7 +17,13 @@
 	box-sizing border-box
 }
 
-
+.rotate {
+	
+	&-180 {
+		transform-origin center
+		transform rotate(180deg)
+	}
+}
 
 .gallery-slider {
 	&__pr {
@@ -160,6 +166,99 @@
 		border none
 		padding 5px
 		background yellow
+	}
+}
+
+.s-top-menu-catalog {
+	position relative
+	height 0
+	color #1E1A08
+	
+	&__wrap {
+		position absolute
+		top 0
+		left 0
+		width 100%
+		z-index 10
+		background white
+		box-shadow 0px 9px 30px rgba(0, 0, 0, 0.1)
+	}
+	
+	&__container {
+		padding 30px 0 50px
+		
+		@media (min-width 600px) {
+			column-count 2
+		}
+		
+		@media (min-width 992px) {
+			column-count 3
+		}
+		
+		container()
+	}
+	
+	&__item {
+		margin-bottom 25px 
+		-webkit-column-break-inside avoid
+		page-break-inside avoid
+		break-inside avoid
+	}
+	
+	&__button {
+		padding 5px
+		border none
+		background none
+		line-height 0
+		
+		&:hover {
+			fill $color-midnight
+		}
+		
+		&_x {
+			position absolute
+			top 10px
+			right 15px
+		}
+		
+		&_arrow {
+			position absolute
+			left 50%
+			bottom 15px
+		}
+	}
+	
+	&__button-icon {
+		display block
+	}
+}
+
+.top-menu-catalog {
+	&__title {
+		margin 0 0 15px
+		font-size 14px 
+		line-height 18px 
+	}
+	
+	&__list {
+		margin 0
+		padding 0
+		list-style-type none
+		font-size 12px 
+	}
+	
+	&__item {
+		margin-bottom 1em
+	}
+	
+	&__link {
+		text-decoration none
+		color $color-midnight
+		
+		&:hover {
+			text-decoration underline
+			text-decoration-style dashed
+		}
 	}
 }
 
@@ -831,6 +930,13 @@
 				background lighten(#FEED00, 10%)
 				box-shadow none
 			}
+		}
+	}
+	
+	&_state {
+		&_black {
+			background #1E1A08
+			color white
 		}
 	}
 }
