✅ Меню каталога в шапке

--- a/source/env.pug
+++ b/source/env.pug
@@ -8,9 +8,9 @@ html(lang="ru")
 		#app
 			include pug/top
 			include pug/header
+			include pug/top-menu-catalog
 			include pug/menu-catalog
 			include pug/envelope
-
 			include pug/env-catalog
 			include pug/info
 			include pug/foo-nav
