--- a/source/stylus/inc/variables.styl
+++ b/source/stylus/inc/variables.styl
@@ -6,8 +6,19 @@ $color-smoke = #f2f2f2
 $color-carmine-pink = #EB5757
 $color-graphite-gray = #4D4D54
 
+$color-fir-green = #282C23
+$color-dark-brown = #1e1a08
+
 .fill-carmine-pink {
 	fill $color-carmine-pink
+}
+
+.text-white {
+	color white
+}
+
+.text-dark-brown {
+	color $color-dark-brown
 }
 
 .text-graphite-gray {
@@ -30,6 +41,10 @@ $color-graphite-gray = #4D4D54
 	color $color-smoke
 }
 
+
+.paper-fir-green {
+	background-color $color-fir-green
+}
 
 
 .decoration-yellow {
