--- a/source/stylus/inc/variables.styl
+++ b/source/stylus/inc/variables.styl
@@ -8,6 +8,12 @@ $color-graphite-gray = #4D4D54
 
 $color-fir-green = #282C23
 $color-dark-brown = #1e1a08
+$color-gainsborough = #E6E6E6
+$color-dark-gray = #828282
+
+.text-dark-gray {
+	color $color-dark-gray
+}
 
 .fill-carmine-pink {
 	fill $color-carmine-pink
