--- a/source/stylus/style.styl
+++ b/source/stylus/style.styl
@@ -1,11 +1,11 @@
 @import "inc/variables"
 @import "inc/mixin"
 @import "inc/typo"
-// @import "inc/text"
+@import "inc/text"
 @import "inc/paper"
 // @import "inc/card"
 // @import "inc/section"
-// @import "inc/w"
+@import "inc/w"
 @import "inc/offset"
 @import "inc/swiper"
 // @import "inc/iCheck"
@@ -15,6 +15,14 @@
 *::after,
 *::before {
 	box-sizing border-box
+}
+
+.clearfix {
+	&::after {
+		content: "";
+		display: table;
+		clear: both;
+	}
 }
 
 .rotate {
@@ -968,6 +976,32 @@
 	}
 
 	&_theme {
+		&_sunrise {
+			background #F9D94A
+			color #1E1A08
+			
+			&:hover {
+				background darken(#F9D94A, 15%)
+			}
+			
+			&:active {
+				background lighten(#F9D94A, 15%)
+			}
+		}
+		
+		&_dark-brown {
+			background $color-dark-brown
+			color white
+			
+			&:hover {
+				background lighten($color-dark-brown, 10%)
+			}
+			
+			&:active {
+				background darken($color-dark-brown, 10%)
+			}
+		}
+		
 		&_o-black-white {
 			border 1px solid #1E1A08
 			background white
@@ -1011,6 +1045,11 @@
 				box-shadow none
 			}
 		}
+	}
+	
+	&__icon {
+		margin-right 10px 
+		fill currentColor
 	}
 	
 	&_state {
@@ -1058,6 +1097,50 @@
 	&__button {
 		display block
 		margin auto
+	}
+}
+
+.slider-card {
+	&__header {
+		margin-bottom 20px
+		outline 1px solid #E8E8E8
+		outline-offset -1px
+	}
+	
+	&__pr {
+		flex-shrink 0
+	}
+	
+	&__thumb {
+		flex-shrink 0
+		outline 1px solid #E8E8E8
+		outline-offset -1px
+		cursor pointer
+		
+		&_active {
+			outline-color #1E1A08
+		}
+	}
+}
+
+.s-card {
+	&__container {
+		container()
+	}
+	
+	&__slider {
+		float left
+		width 580px
+		margin 0 40px 20px 0 
+	}
+	
+	&__title {
+		margin-bottom 35px
+		font-size 24px 
+	}
+	
+	&__price {
+		margin-bottom 25px
 	}
 }
 
@@ -1116,7 +1199,7 @@
 	}
 }
 
-/*
+
 .fully-img {
 	display block
 	max-width 100%
@@ -1124,6 +1207,104 @@
 	height auto
 }
 
+.c-gallery {
+	display block
+
+	&::before {
+		position absolute
+		display block
+		width 100%
+		height 100%
+		background url(../images/zoom.svg) center no-repeat
+		content ""
+		opacity 0
+	}
+
+	&:hover::before {
+		opacity 1
+	}
+}
+
+.hub-card-price {
+	&__label {
+		font-size 13px
+		color #4F4F4F
+	}
+
+	&__value {
+		color #1E1A08
+		
+		@supports (flex-wrap wrap) {
+			display flex
+			flex-wrap wrap
+			align-items center
+		}
+	}
+
+	&__old {
+		display inline
+		margin-right 10px
+		text-decoration line-through
+		font-size 18px
+	}
+
+	&__new {
+		display inline
+		font-size 36px
+	}
+}
+
+.hub-card-buttons {
+
+	&__row {
+		margin-bottom 15px
+
+		@media (min-width 1100px) {
+			display flex
+			align-items center
+		}
+	}
+
+	&__button {
+		margin-right 30px
+		height 45px
+	}
+
+	&__link {
+		padding 10px 5px
+		text-align left
+
+		@media (min-width 1100px) {
+			text-align left
+		}
+	}
+}
+
+.hub-chars {
+	display inline-grid
+	grid-template-columns auto auto
+	grid-gap 10px
+	
+	
+	&__key {
+		
+	}
+	
+	&__value {
+		
+	}
+}
+
+.a {
+	text-decoration none
+	
+	&:hover {
+		color $color-midnight
+		text-decoration underline
+		text-decoration-style dashed
+	}
+}
+/*
 .button {
 	display inline-flex
 	flex-wrap wrap
@@ -1658,60 +1839,8 @@
 	}
 }
 
-.hub-card-price {
-	&__label {
-		font-size 13px
-	}
 
-	&__value {
 
-		@supports (flex-wrap wrap) {
-			display flex
-			flex-wrap wrap
-			align-items center
-		}
-	}
-
-	&__old {
-		display inline
-		margin-right 10px
-		text-decoration line-through
-		font-size 18px
-	}
-
-	&__new {
-		display inline
-		font-size 36px
-	}
-}
-
-.hub-card-buttons {
-
-	&__row {
-		margin-bottom 15px
-
-		@media (min-width 1100px) {
-			display flex
-			align-items center
-		}
-	}
-
-	&__button {
-		margin-right 30px
-		height 45px
-	}
-
-	&__link {
-		display inline-flex
-		justify-content center
-		padding 10px 5px
-		text-align center
-
-		@media (min-width 1100px) {
-			text-align left
-		}
-	}
-}
 
 .tabs-chars {
 	margin 0
