--- a/source/card.pug
+++ b/source/card.pug
@@ -13,7 +13,8 @@ html(lang="ru")
 			include pug/breadcrumbs
 			
 			include pug/card
-			| 123
+			include pug/chars
+
 			include pug/foo-nav
 			include pug/map-of-services
 		include pug/script
