✅ Страница пример вариантов сетки католога

--- a/source/pug/aside-rec.pug
+++ b/source/pug/aside-rec.pug
@@ -3,7 +3,7 @@
 		br
 		| понадобиться:
 
-	card-catalog(title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4400.00 ₽" image="images/catalog/6.jpg" :mods="{tile: app.width < 992}")
+	card-catalog(title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4400.00 ₽" image="images/catalog/6.jpg" :mods="{list: app.width < 992}")
 		| Материал: Акрил/ПВХ/Композит
 		br
 		| Размер: 500х600мм
